--- a/src/ageCheck/themes/default/default.html
+++ b/src/ageCheck/themes/default/default.html
@@ -5,11 +5,13 @@
 				<h4 class="ac-title">{title}</h4>
 			</div>
 			<div class="ac-modal-body">
+				<div class="errors"></div>
 				<p>{text}</p>
+				<div class="date"></div>
 			</div>
 			<div class="ac-modal-footer">
-				<button type="cancel">nope</button>
-				<button type="submit">I am over 18+</button>
+				<button type="cancel">{btnCancel}</button>
+				<button type="submit">{btnSubmit}</button>
 			</div>
 		</div>
 	</div>
